--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ img {
 
 .pic {
   border-radius: 50%;
-  max-height: 50%;
+  /* max-height: 50%; */
   justify-content: center;
   align-items: center;
   margin: 25px;
