--- a/style.css
+++ b/style.css
@@ -2,42 +2,41 @@ html {
   scroll-behavior: smooth;
   /* BOX SIZING: SIEHE https://css-tricks.com/box-sizing/ */
   /* color-scheme: dark light; */
+  width: 100vw;
+  height: 100vh;
+}
 
-  *,
-  *:before,
-  *:after {
-    box-sizing: border-box;
-  }
-
-  /* ----------------------------------------------------------------------
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+/* ----------------------------------------------------------------------
       GOOGLE FONTS
 ---------------------------------------------------------------------- */
 
-  /* ALTERNATIV: GFonts über CSS einbinden
+/* ALTERNATIV: GFonts über CSS einbinden
   @import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Montserrat:wght@100;400;700&family=Poppins:wght@100;300;700&family=Roboto+Slab:wght@100;400;700&family=Roboto:wght@100;400;700&family=Source+Code+Pro:wght@200;400;700&display=swap"); */
-  font-family: "Bruno Ace SC",
-  cursive;
+font-family: "Bruno Ace SC", cursive;
 
-  .font--serif {
-    font-family: "Roboto Slab", serif;
-  }
+.font--serif {
+  font-family: "Roboto Slab", serif;
+}
 
-  .font--sans-serif {
-    font-family: "Montserrat", sans-serif;
-  }
+.font--sans-serif {
+  font-family: "Montserrat", sans-serif;
+}
 
-  .font--monospace {
-    font-family: "Source Code Pro", monospace;
-  }
+.font--monospace {
+  font-family: "Source Code Pro", monospace;
+}
 
-  .font--roboto {
-    font-family: "Roboto", sans-serif;
-  }
+.font--roboto {
+  font-family: "Roboto", sans-serif;
+}
 
-  .font--poppins {
-    font-family: "Poppins", sans-serif;
-  }
-
+.font--poppins {
+  font-family: "Poppins", sans-serif;
 }
 
 /* ----------------------------------------------------------------------
@@ -66,8 +65,6 @@ body {
   /* margin: 20px; */
   /* padding: 20px; */
 }
-
-
 
 /* -------------------- BORDER FÜR ALLE ---------------- */
 h1,
@@ -137,7 +134,7 @@ h3 {
 
 p {
   /* color: rgb(255, 255, 255, 0.8); */
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   letter-spacing: 0.1em;
   line-height: 1.5em;
@@ -147,7 +144,7 @@ p {
 }
 
 .p-white {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   letter-spacing: 0.1em;
   line-height: 1.5em;
@@ -157,7 +154,6 @@ p {
   margin: 35px;
 }
 
-
 .p-left {
   text-align: left;
 }
@@ -165,7 +161,6 @@ p {
 .p-right {
   text-align: right;
 }
-
 
 /* ----------------------------------------------------------------------
 NAVIGATION MAIN
@@ -193,8 +188,6 @@ NAVIGATION MAIN
   color: #262626;
   background-color: #ffffff;
 } */
-
-
 
 .nav-main img {
   height: 20px;
@@ -259,12 +252,10 @@ PREFACE
   }
 } */
 
-
 .preface {
   background-color: white;
   padding-bottom: 50px;
 }
-
 
 .preface h2 {
   font-weight: 600;
@@ -409,9 +400,7 @@ PREFACE
 
 .preface-a:hover {
   background-color: #ff4a11;
-  ;
 }
-
 
 /* ----------------------------------------------------------------------
 PORTFOLIO
@@ -464,7 +453,7 @@ PORTFOLIO
 
 .portfolio p {
   /* color: rgb(255, 255, 255, 0.8); */
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   letter-spacing: 0.1em;
   line-height: 1.5em;
@@ -480,17 +469,18 @@ PORTFOLIO
   /* background-image: url(./assets/kai-platine.jpg); */
   /* background-image: url(./assets/kai-platine.jpg); */
   /* transform: rotate(-5deg); */
-
 }
 
 .diagonal::after {
-  content: '';
+  content: "";
   /* background-image: url(./assets/kai-platine.jpg); */
 
-  background: linear-gradient(45deg,
-      rgba(15, 36, 0, 1) 0%,
-      rgba(67, 121, 9, 1) 35%,
-      rgba(188, 255, 0, 0.3) 100%);
+  background: linear-gradient(
+    45deg,
+    rgba(15, 36, 0, 1) 0%,
+    rgba(67, 121, 9, 1) 35%,
+    rgba(188, 255, 0, 0.3) 100%
+  );
   opacity: 0.9;
   position: absolute;
   z-index: -1;
@@ -498,12 +488,9 @@ PORTFOLIO
   transform: skewY(var(--skew-angle));
 }
 
-
 /* ----------------------------------------------------------------------
 TESTIMONIALS
 ---------------------------------------------------------------------- */
-
-
 
 /* ----------------------------------------------------------------------
 ABOUT
@@ -524,7 +511,6 @@ ABOUT
 }
 
 .about-flex-child {
-
   width: 50%;
   /* border-radius: 50%; */
   /* align-items: flex-end; */
@@ -564,18 +550,20 @@ img {
   display: inline-block;
   font-size: 16px;
   /* margin: 14px 16px; */
-  padding-inline: 50px cursor: pointer;
+  padding-inline: 50px;
+  cursor: pointer;
   border-radius: 8px;
-  transition-duration 0.4s;
+  transition-duration: 0.4s;
 }
 
 .button1 {
-  background-color: #FF4A11;
+  background-color: #ff4a11;
 }
 
 .button1:hover {
-  background-color: #E5430F;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  background-color: #e5430f;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* ----------------------------------------------------------------------
