--- a/style.css
+++ b/style.css
@@ -89,7 +89,10 @@ section {
 }
 
 img {
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
 }
 
 .fullsize,
