--- a/style.css
+++ b/style.css
@@ -90,9 +90,15 @@ section {
 
 img {
   /* max-width: 100%; */
-  width: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* object-fit: cover; */
+  margin-top: 1em;
+  width: 250px;
+  height: 250px;
   /* height: 100%; */
   object-fit: cover;
+  /* object-fit: contain; */
 }
 
 .fullsize,
