--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ section {
   /* min-height: 100vh; */
 }
 
-img {
+iframe,
+.img-250 {
   /* max-width: 100%; */
   /* width: 100%; */
   /* height: 100%; */
